--- a/css/style1.css
+++ b/css/style1.css
@@ -21,14 +21,17 @@ body {
 }
 
 h1{
-  padding: 10px;
+  padding: 15px;
+  font-size: 37px;
 }
 
 ul {
   list-style: none;
 }
+
 li {
   font-size: 18px;
+  line-height: 1.2;
 }
 
 .feste {
