--- a/css/style1.css
+++ b/css/style1.css
@@ -6,7 +6,6 @@
 
 body {
   background-color: coral;
-  text-align: center;
 }
 
 .precedente {
@@ -20,18 +19,50 @@ body {
   cursor: pointer;
 }
 
+.contenitore {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 h1{
   padding: 15px;
   font-size: 37px;
 }
 
-ul {
-  list-style: none;
+.griglia {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-li {
-  font-size: 18px;
-  line-height: 1.2;
+.riga {
+  max-width: 670px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.quadrato {
+  width: 110px;
+  height: 110px;
+  border: solid 2px black;
+  background-color: lightblue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  position: relative;
+}
+
+.quadrato span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 5px;
+  font-size: 15px;
 }
 
 .feste {
